@startuml
abstract class Media {
  - id: int
  - title: String
  - category: String
  - cost: float
  + isMatch(title: String): boolean
}

interface Playable {
  + play(): void
}

class Book {
  - authors: ArrayList<String>
  - content: String
}

class Disc {
  - length: int
  - director: String
}

class DigitalVideoDisc
class CompactDisc {
  - artist: String
  - tracks: ArrayList<Track>
}

class Track {
  - title: String
  - length: int
}

class Cart {
  - itemsOrdered: ArrayList<Media>
}

class Store {
  - itemsInStore: ArrayList<Media>
}

Media <|-- Book
Media <|-- Disc
Disc <|-- DigitalVideoDisc
Disc <|-- CompactDisc
Playable <|.. DigitalVideoDisc
Playable <|.. CompactDisc
Playable <|.. Track
CompactDisc o-- Track
Cart o-- Media
Store o-- Media
@enduml
